# GTVimageVect

./: .travis.yml  BasicVectoImageExporter.cpp  BasicVectoImageExporter.h  BezierCurve.h  BezierTriangle2.h  CMakeLists.txt  CairoViewer.h  ChangeLog.md  ImageConnecter.h  ImageTriangulation.h  LeastSquares.h  README.md  appveyor.yml  output-laplacian-before.pgm  output-tv.ppm  script-figures.sh  tv-triangulation-color.cpp
.github/workflows/: buildAndDocumentation.yml
src/: BasicVectoImageExporter.cpp  BasicVectoImageExporter.h  BreadthFirstVisitorWithParent.h  BreadthFirstVisitorWithParent.ih  FourierPoisson.h  ImageTVRegularization.h
test_kevin/: output-tv.ppm  run.sh
test_kevin/input/: 1.ppm  11.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  ara.ppm  barbara.ppm  dolphin.ppm  ipol-coarsened.pgm  test1.ppm  x-shapes.pgm
tests/: CMakeLists.txt  testBasicVectoImage.cpp
tests/ex_results/: skeleton.ppm
